# Compression-Analysis

./: .gitignore  README.md
CompressionModules/: BuildNotes  CMakeLists.txt
CompressionModules/include/: ChebyshevAlgorithms.h  FFTAlgorithms.h  TimingExperiment.h  Utilities.h  ZFPAlgorithms.h  compression.h
CompressionModules/src/: ChebyshevAlgorithms.cpp  TimingExperiment.cpp  Utilities.cpp  ZFPAlgorithms.cpp  compression.cpp  main.cpp
Container/: Docker .txt  Dockerfile  setup_vim.sh
Container/src/: .vimrc  CMakeLists.txt  CompressionDecompression.cpp  CompressionDecompression.h  TimingExperiment.cpp  TimingExperiment.h  Utilities.cpp  Utilities.h  build_script.sh  main.cpp
WindowsVisualStudioSolution/CDF/: CDF.sln
WindowsVisualStudioSolution/CDF/CompressionDecompressionFramework/: ChebyshevAlgorithms.cpp  ChebyshevAlgorithms.h  CompressionDecompression.cpp  CompressionDecompression.h  CompressionDecompressionFramework.vcxproj  CompressionDecompressionFramework.vcxproj.filters  FFTAlgorithms.cpp  FFTAlgorithms.h  FFTTesting.cpp  SVDAlgorithms.cpp  SVDAlgorithms.h  TimingExperiment.cpp  TimingExperiment.h  Utilities.cpp  Utilities.h  VisualizeWaveMatrix.py  ZFPAlgorithms.cpp  ZFPAlgorithms.h  main.cpp  results.csv  results_.10.csv  results_.11.csv  results_.12.csv  results_.3.csv  results_.4.csv  results_.5.csv  results_.6.csv  results_.7.csv  results_.8.csv  results_.9.csv  results_FFT.csv  wave_data.csv
WindowsVisualStudioSolution/CDF/CompressionDecompressionFramework/x64/Debug/: CompressionDecompressionFramework.exe.recipe  CompressionDecompressionFramework.ilk  main.obj.enc  vc143.idb
WindowsVisualStudioSolution/CDF/CompressionDecompressionFramework/x64/Debug/Compress.a2d869a1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CompressionDecompressionFramework.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ZFPCompression/: ZFPCompression.sln
ZFPCompression/ZFPCompression/: ZFPCompression.vcxproj  main.cpp
ZFPCompression/ZFPCompression/x64/Debug/: ZFPCompression.exe.recipe  vc143.idb
ZFPCompression/ZFPCompression/x64/Debug/ZFPCompression.tlog/: ZFPCompression.lastbuildstate
